k8s/psykube-presentation.deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: psykube-presentation
    psykube: "true"
  name: psykube-presentation
  namespace: default
spec:
  selector:
    matchLabels:
      app: psykube-presentation
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: psykube-presentation
    spec:
      containers:
      - env:
        - name: PORT
          value: "3000"
        - name: HTTP_PORT
          value: "3000"
        image: jwaldrip/psykube-presentation-app
        name: psykube-presentation-app
        ports:
        - containerPort: 3000
          name: http
