k8s/psykube-presentation.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: psykube-presentation
    psykube: "true"
  name: psykube-presentation
  namespace: default
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
  selector:
    app: psykube-presentation
  type: ClusterIP
